updated student count

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="1459" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1460" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -462,7 +462,8 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Intro to Finance </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="300" src="assets/img/introtofinance.png">
+                  <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="300"
+                    src="assets/img/introtofinance.png">
                   <p class="w-75 mt-2" style="font-style: normal;">The intro to Finance lecture, also given to SHAD
                     Canada students last summer, introduced the fundamentals of business and market competition which
                     has been extensively studied in economics and business domains. Through a series of fun examples,
@@ -531,9 +532,12 @@
                 <h1 id="intro">Compass Codes</h1>
                 <div class="d-flex w-75 flex-wrap justify-content-center" id="compass-codes">
                   <img class="rounded-3 img-fluid" src="assets/img/other/compass_codes.png">
-                  <p class="w-75 mt-2 font-monospace">Compass Codes is a 2-month long, FREE introductory coding program hosted in
-                    partnership with Compass Tutoring. This program, brought to you by our very best computer science tutors Charles Zhang and
-                    Feng Zhang, will host fun, engaging, and hands-on lessons to teach students grade 5 to 10 the basics of
+                  <p class="w-75 mt-2 font-monospace">Compass Codes is a 2-month long, FREE introductory coding program
+                    hosted in
+                    partnership with Compass Tutoring. This program, brought to you by our very best computer science
+                    tutors Charles Zhang and
+                    Feng Zhang, will host fun, engaging, and hands-on lessons to teach students grade 5 to 10 the basics
+                    of
                     computer science, web-development, and user-friendly and dynamic web-applications.
                   </p>
                 </div>
