--- a/index.html
+++ b/index.html
@@ -460,6 +460,48 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
+                  <h1 id="intro">Top Canadian Business Programs </h1>
+                  <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                      <img class="rounded-3 img-fluid" src="./assets/img/other/HHBusinessPanel.png" width="400" alt="upenn panel">
+                      <p class="w-75 mt-2" style="font-style: normal;">
+                          Our guest panelists, Prem Mehta-Spooner from Queen's University's Commerce Program and Jane Huang
+                          from Western University's IVEY Business School will discuss their experience applying to and
+                          attending top business programs in Canada!
+                      </p>
+                  </div>
+              </div>
+          </div>
+          
+          <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                  <h1 id="intro">My Experience at the Wharton Business School <!--at the University of Pennsylvania--> </h1>
+                  <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                      <img class="rounded-3 img-fluid" src="./assets/img/other/UPennPanel.png" alt="upenn panel" width="400">
+                      <p class="w-75 mt-2" style="font-style: normal;">
+                          Our guest panelist, Marissa Sawicki, who is currently an MBA student at the University of
+                          Pennsylvania Wharton school of business joined us to discuss her experience applying to and
+                          attending one of the top business schools in the world!
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                  <h1 id="intro">UW and UofT Software Engineering Panel </h1>
+                  <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                      <img class="rounded-3 img-fluid" src="./assets/img/other/university-panel-poster.png" alt="se panel" width="400">
+                      <p class="w-75 mt-2" style="font-style: normal;">
+                          Our guest panelists, Victor Wei from the University of Waterloo’s SE program and Andrey Kobyakov
+                          from the University of Toronto’s SE program joined us to discuss their experience applying to and
+                          attending university software engineering programs!
+                      </p>
+                  </div>
+              </div>
+          </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Intro to Finance </h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid intro-to-finance" id="intro-to-finance" width="300"
