--- a/team.html
+++ b/team.html
@@ -241,11 +241,27 @@
               </div>
             </div>
           </div>
+
+
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Neha</h4>
+                <span>Quality Assurance Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic" data-bioName="Morouje"><img src="assets/img/team/Morouje.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Morouje Sherif</h4>
                 <span>Quality Assurance Manager</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
