--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <h3>About Us</h3>
               <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible,
                 and quality educational resources to all students and families in need. Over the past year,
-                the HomeworkHub community has grown to over <strong>2400</strong> members across the world
+                the HomeworkHub community has grown to over <strong>2500</strong> members across the world
                 including tutors and students from Canada, the US, China, Kenya, India, Philippines, and Indonesia!
               </p>
 
@@ -204,7 +204,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="1491" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1561" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -213,7 +213,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="948" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="968" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -222,7 +222,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-people"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="8946" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="9366" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Hours Tutored</p>
                 </div>
@@ -1125,6 +1125,19 @@
                   police check.
                   If you are an adult out of school, a check must still be provided and you will most likely be
                   paired with an adult student.
+                </p>
+              </div>
+            </li>
+
+            <li data-aos="fade-up" data-aos-delay="500">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-7"
+                class="collapsed">I am tutoring/tutored with HomeworkHub, can I get a reference?
+                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Absolutely! Current/past tutors with HomeworkHub can get references/letters of recommendations by emailing 
+                  our <a style="display:inline;padding:0" href="mailto:zhou_xuan@homeworkhubtutoring.ca">references director</a>. Information regarding your 
+                  time at HomeworkHub will need to be provided in your email.
                 </p>
               </div>
             </li>
