--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="968" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="979" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -674,6 +674,17 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <a href="http://myhomeworkrewards.com/">
+                  <h3>My Homework Rewards </h3>
+                  <h4>Community Partner</h4>
+                  <img src="assets/img/other/myhomeworkrewards-logo.png" class="partner_img">
+                </a>
+
+              </div>
+            </div><!-- End testimonial item -->
+            
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <a href="https://www.ignitionhacks.org/">
