--- a/team.html
+++ b/team.html
@@ -259,7 +259,8 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic" data-bioName="Morouje"><img src="assets/img/team/Morouje.png" class="img-fluid" alt=""></div>
+              <div class="pic" data-bioName="Morouje"><img src="assets/img/team/Morouje.png" class="img-fluid" alt="">
+              </div>
               <div class="member-info">
                 <h4>Morouje Sherif</h4>
                 <span>Quality Assurance Manager</span>
@@ -301,7 +302,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Kaniesa"><img src="assets/img/team/Kaniesa.png" class="img-fluid" alt="">
@@ -344,7 +345,7 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic" data-bioName="MyChau"><img src="assets/img/team/mychau.jpg" class="img-fluid" alt="">
