--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Absolutely! You can sign up for a total of 3 subjects at a time, although tutor
+                  Absolutely! You can sign up for a total of 1 subject at a time, although tutor
                   availability may vary from subject to subject.
                 </p>
               </div>
