--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column py-5 px-lg-5" data-aos="fade-left">
               <h3>About Us</h3>
               <p>HomeworkHub is a youth-led, non-profit organization dedicated to providing free, accessible,
-                and quality educational resources to all students and families in need. Over the past year,
-                the HomeworkHub community has grown to over <strong>2500</strong> members across the world
+                and quality educational resources to all students and families in need. Over the past two years,
+                the HomeworkHub community has grown to over <strong>2700</strong> members across the world
                 including tutors and students from Canada, the US, China, Kenya, India, Philippines, and Indonesia!
               </p>
 
@@ -204,7 +204,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                 <div class="count-box">
                   <i class="bi bi-journal-richtext"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="1561" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1814" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>Students</p>
                 </div>
@@ -213,7 +213,7 @@
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                 <div class="count-box">
                   <i class="bi bi-headset"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="979" data-purecounter-duration="1"
+                  <span data-purecounter-start="0" data-purecounter-end="1009" data-purecounter-duration="1"
                     class="purecounter"></span>
                   <p>HomeworkHub Tutors</p>
                 </div>
@@ -458,6 +458,20 @@
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
 
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">HomeworkHub 2-year anniversary</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <!-- <img class="rounded-3 img-fluid" src="./assets/img/other/HHBusinessPanel.png" width="400"
+                    alt="upenn panel"> -->
+                  <p class="w-75 mt-2" style="font-style: normal;">
+                    HomeworkHub celebrates its two year anniversary this February! We are so grateful for all of our
+                    team members, volunteers, and students who have supported us along this amazing journey. We hope to
+                    have many more years with you all.
+                  </p>
+                </div>
+              </div>
+            </div>
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Top Canadian Business Programs </h1>
@@ -1072,8 +1086,11 @@
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Absolutely! You can sign up for a total of 1 subject at a time, although tutor
-                  availability may vary from subject to subject.
+                  As of March 2023, we are limiting each student to 1 subject (temporary decrease from 3 subjects) due
+                  to extremely high student demand. We are also giving priority pairing to in-need students. If you have
+                  any urgent needs or requests, please email us. We thank you for your understanding and we hope to get
+                  back to our regular 3 subjects soon!
+
                 </p>
               </div>
             </li>
