--- a/index.html
+++ b/index.html
@@ -460,10 +460,24 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Top Canadian Scholarships, Saturday March 25th at 3:15 PM EST</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="400"
+                    alt="scholarship panel">
+                  <p class="w-75 mt-2" style="font-style: normal;">
+                    Our guest panelists, 2022 Schulich Scholar Sarah Wilson from University of Waterloo's Computer Science 
+                    program and 2023 Queen's Chancellor Scholar Sammi Wang from Queen's University's Commerce Program, will 
+                    discuss their experience applying to and winning top scholarships in Canada!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">HomeworkHub 2-year anniversary</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <!-- <img class="rounded-3 img-fluid" src="./assets/img/other/HHBusinessPanel.png" width="400"
-                    alt="upenn panel"> -->
+                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="400"
+                    alt="2 Year Anni Team Picture">
                   <p class="w-75 mt-2" style="font-style: normal;">
                     HomeworkHub celebrates its two year anniversary this February! We are so grateful for all of our
                     team members, volunteers, and students who have supported us along this amazing journey. We hope to
