--- a/university-panel.html
+++ b/university-panel.html
@@ -217,7 +217,22 @@
               data-aos="fade-left">
               <h3>Panel Schedule</h3>
 
-            <!-- BUSINESS PANEL -->
+            <!-- SCHOLARSHIP PANEL -->
+            <p>
+              Top Canadian Scholarships, <strong>Saturday March 25th at 3:15 PM EST</strong>
+            </p>
+            <img data-aos="fade-down" src="./assets/img/scholarshipPanel.PNG" alt="scholarship panel" srcset="" class="img-fluid rounded-3 mb-5" width="400">
+          
+            <p class="panel-text">
+              Our guest panelists, 2022 Schulich Scholar Sarah Wilson from University of Waterloo’s Computer Science program and 2023 Queen’s Chancellor Scholar Sammi Wang from Queen's University's Commerce Program, will discuss their experience applying to and winning top scholarships in Canada! 
+            </p>
+
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQEsmlS9zP5F9FnfcxGrFnXCxG6uJeVKyvvL0Wl1cX_Nu1ug/viewform">
+              <button class="reg mb-5">Register Here!</button>
+            </a>
+
+            
+              <!-- BUSINESS PANEL -->
             <p>
               Top Canadian Business Programs, <strong>Sunday November 6th at 7:00 PM EST</strong>
             </p>
