--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
-                <h1 id="intro">Top Canadian Scholarships, Saturday March 25th at 3:15 PM EST</h1>
+                <h1 id="intro">Top Canadian Scholarships</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="400"
                     alt="scholarship panel">
@@ -476,7 +476,7 @@
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">HomeworkHub 2-year anniversary</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="400"
+                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="600"
                     alt="2 Year Anni Team Picture">
                   <p class="w-75 mt-2" style="font-style: normal;">
                     HomeworkHub celebrates its two year anniversary this February! We are so grateful for all of our
