--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 </head>
 
-<body>
+<body id="app">
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center header-transparent py-5">
@@ -457,28 +457,13 @@
         </div>
         <div class="events-slider swiper">
           <div class="swiper-wrapper">
-
             <div class="swiper-slide">
-              <div class="testimonial-item d-flex flex-column align-items-center">
-                <h1 id="intro">Top Canadian Scholarships</h1>
-                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="400"
-                    alt="scholarship panel">
-                  <p class="w-75 mt-2" style="font-style: normal;">
-                    Our guest panelists, 2022 Schulich Scholar Sarah Wilson from University of Waterloo's Computer Science 
-                    program and 2023 Queen's Chancellor Scholar Sammi Wang from Queen's University's Commerce Program, will 
-                    discuss their experience applying to and winning top scholarships in Canada!
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="testimonial-item d-flex flex-column align-items-center">
+              <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
                 <h1 id="intro">HomeworkHub 2-year anniversary</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="600"
+                  <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="500"
                     alt="2 Year Anni Team Picture">
-                  <p class="w-75 mt-2" style="font-style: normal;">
+                  <p class="w-75 mt-5" style="font-style: normal;">
                     HomeworkHub celebrates its two year anniversary this February! We are so grateful for all of our
                     team members, volunteers, and students who have supported us along this amazing journey. We hope to
                     have many more years with you all.
@@ -486,6 +471,23 @@
                 </div>
               </div>
             </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex flex-column align-items-center">
+                <h1 id="intro">Top Canadian Scholarships</h1>
+                <div class="d-flex justify-content-center align-items-center max-w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="./assets/img/scholarshipPanel.PNG" width="300"
+                    alt="scholarship panel">
+                  <p class="w-75 mt-2" style="font-style: normal;">
+                    Our guest panelists, 2022 Schulich Scholar Sarah Wilson from University of Waterloo's Computer
+                    Science
+                    program and 2023 Queen's Chancellor Scholar Sammi Wang from Queen's University's Commerce Program,
+                    will
+                    discuss their experience applying to and winning top scholarships in Canada!
+                  </p>
+                </div>
+              </div>
+            </div>
+
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Top Canadian Business Programs </h1>
@@ -634,10 +636,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Laurier Volunteers Fair!</h1>
-                <div class="d-flex flex-column justify-content-center align-items-center" id="volunteer-fair">
-                  <img class="rounded-3" width="450" src="assets/img/other/laurierevent.JPG">
-                  A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for inviting
-                  HomeworkHub to their University Fair!
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <img class="rounded-3 w-50" src="assets/img/other/laurierevent.JPG">
+                  <div class="mt-3">A big thank you to the <a href="https://www.wlu.ca/">University of Laurier </a> for
+                    inviting
+                    HomeworkHub to their University Fair!</div>
                 </div>
               </div>
             </div>
@@ -645,11 +648,12 @@
             <div class="swiper-slide">
               <div class="testimonial-item d-flex flex-column align-items-center">
                 <h1 id="intro">Compass RIDE for Refugee</h1>
-                <div class="d-flex flex-column justify-content-center align-items-center" id="compass-ride">
-                  <img class="rounded-3" src="assets/img/other/Compassrideevent.JPG">
-                  Thank you to our community partner <a href="https://compassrefugee.ca/">Compass Refugee</a> for
-                  inviting HomeworkHub to their annual RIDE for
-                  Refuge event!
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <img class="rounded-3 w-50 sm:w-100" src="assets/img/other/Compassrideevent.JPG">
+                  <div class="mt-4"> Thank you to our community partner <a href="https://compassrefugee.ca/">Compass
+                      Refugee</a> for
+                    inviting HomeworkHub to their annual RIDE for
+                    Refuge event!</div>
                 </div>
               </div>
             </div>
@@ -1354,6 +1358,7 @@
 
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
