Closed Student Sign-Up Form
Changed the student sign-up form for the waiting list one.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
             <ul>
               <li><a
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">Register</a>
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSegQjPmsCvP8na2v5GfLaR_tw5BrqTwAmA6SaFkMGbKoGEgBg/viewform?embedded=true">Register</a>
               </li>
               <li><a href="/refugee.html">Refugee Info</a>
 
@@ -124,7 +124,7 @@
             <h2>Let's learn and teach together!</h2>
             <div class="text-center text-lg-start">
               <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="btn-get-started scrollto m-2">Become a Tutor</a>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSegQjPmsCvP8na2v5GfLaR_tw5BrqTwAmA6SaFkMGbKoGEgBg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
               <a href="university-panel.html" class="btn-get-started scrollto m-2">University Panel</a>
               <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
@@ -361,7 +361,7 @@
               <h3>Subject Limit</h3>
               <img class="icons" src="./assets/img/icons/credit-limit.png">
               <h5>You can sign up for</h5>
-              <p><b>1</b> subjects at a time</p>
+              <p><b>1</b> subject at a time</p>
 
             </div>
           </div>
@@ -440,7 +440,7 @@
 
           <div class="d-flex justify-content-center">
             <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true">
+              href="https://docs.google.com/forms/d/e/1FAIpQLSegQjPmsCvP8na2v5GfLaR_tw5BrqTwAmA6SaFkMGbKoGEgBg/viewform?embedded=true">
               <button class="reg">Register Today</button>
             </a>
           </div>
