--- a/team.html
+++ b/team.html
@@ -432,6 +432,20 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-3">
+            <div class="member" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic" data-bioName="Diana"><img src="assets/img/team/Diana.JPG" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Diana Malaei</h4>
+                <span>Pairing Manager</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>          
+
         </div>
 
       </div>
