--- a/team.html
+++ b/team.html
@@ -445,6 +445,19 @@
               </div>
             </div>
           </div>          
+         <div class="col-lg-3 col-md-6 mt-5 mt-lg-3">
+                <div class="member" data-aos="zoom-in" data-aos-delay="300">
+                  <div class="pic" data-bioName="Jimmy"><img src="assets/img/team/Jimmy.jpg" class="img-fluid" alt=""></div>
+                  <div class="member-info">
+                    <h4>Jimmy Tao</h4>
+                    <span>Pairing and Tech Manager</span>
+                    <!--  <div class="social">
+                      <a href=""><i class="bi bi-instagram"></i></a>
+                      <a href=""><i class="bi bi-linkedin"></i></a>
+                    </div> -->
+                  </div>
+                </div>
+              </div>        
 
         </div>
 
