--- a/index.html
+++ b/index.html
@@ -249,10 +249,8 @@
                 <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
                   <i class="ri-store-line" style="color: #ffbb2c;"></i>
                   <div class="seperate">
-                    <h3><a href="">We're Completely Free</a></h3>
-                    <p class="mt-2">We believe that everyone should have access to quality educational resources.
-                      Financing your
-                      student's educational journey shouldn't be something you need to worry about!
+                    <h3><a href="">We’re Accessible</a></h3>
+                    <p class="mt-2">We believe that everyone should have access to quality educational resources. Financing your student's educational journey shouldn't be something you need to worry about! For our tutoring program, we only charge a one time, $10 registration fee for regular students while remaining  completely FREE for students in need. 
                     </p>
                   </div>
                 </div>
