--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,17 @@
                 </p>
               </div>
             </li>
+            
+            <li data-aos="fade-up" data-aos-delay="500">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-8"
+                class="collapsed">How do I complete the checkout process?
+                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  For regular students, HomeworkHub charges a one time, $10 registration fee to help us cover our operational costs, whereas students who are in need are not required to pay this fee. Please make sure to follow the checkout link after submitting the registration questions to complete payment in order to be paired, or select the “Wave” option for students in need if this applies to you. Please note that students will only be paired when the payment has been submitted, or the wave option is selected.
+                </p>
+              </div>
+            </li>
 
           </ul>
         </div>
