--- a/university-panel.html
+++ b/university-panel.html
@@ -88,8 +88,8 @@
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
           </ul>
-        <li><a href="#real-testimonials">Testimonials</a></li>
-        <li><a href="#donations">Donate</a></li>
+        <li><a href="index.html#real-testimonials">Testimonials</a></li>
+        <li><a href="index.html#donations">Donate</a></li>
 
         <!-- <li><div id="goofgle_translate_element"></div></li -->
         <!-- <li class="dropdown"><a href="#"><span>Translate</span><i class="bi bi-chevron-down"></i></a>
