--- a/volunteer.html
+++ b/volunteer.html
@@ -76,7 +76,7 @@
           </li>
         </ul>
         </li>
-        <li class="dropdown"><a href="#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="index.html#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li>
               <a href="/university-panel.html">University Info Panels</a>
