--- a/refugee.html
+++ b/refugee.html
@@ -76,7 +76,12 @@
           </li>
         </ul>
         </li>
-        <li><a href="index.html#events">Events</a></li>
+        <li class="dropdown"><a href="index.html#events"><span>Events</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <a href="/university-panel.html">University Info Panels</a>
+            </li>
+          </ul>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="team.html">Our Team</a></li>
