Added studivolt as a partner
Signed-off-by: Meh494 <110735674+Meh494@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -711,6 +711,17 @@
                 </a>
 
               </div>
+            </div><!-- End testimonial item -->            
+            
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <a href="https://studivolt.ca/">
+                  <h3>StudiVolt </h3>
+                  <h4>Community Partner</h4>
+                  <img src="assets/img/studivolt.png" class="partner_img">
+                </a>
+
+              </div>
             </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
