Added cs course sign up link
Signed-off-by: Meh494 <110735674+Meh494@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
                 class="btn-get-started scrollto">Become a Student</a>
               <a href="university-panel.html" class="btn-get-started scrollto m-2">University Panel</a>
-              <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
+              <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>              
+              <a href="https://forms.gle/tmzMMnewUQiF5gYo9" class="btn-get-started scrollto m-2">Sign Up For Summer CS Course</a>
+
             </div>
           </div>
         </div>
