--- a/index.html
+++ b/index.html
@@ -259,14 +259,16 @@
               </div>
 
               <div class="dsc_len">
-                <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-                  <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-                  <div class="seperate">
-                    <h3><a href="">One on One Attention</a></h3>
-                    <p class="mt-2">During our sessions, your student will receive personalized, one on one attention
-                      from their
-                      tutor!
-                    </p>
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="50" style="height: calc(100% - 40px); align-items: flex-start"> <!-- temporary css -->
+                  <div style="display: flex; align-items: center;"> <!-- temporary css -->
+                    <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+                    <div class="seperate">
+                      <h3><a href="">One on One Attention</a></h3>
+                      <p class="mt-2">During our sessions, your student will receive personalized, one on one attention
+                        from their
+                        tutor!
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -278,7 +280,7 @@
                   <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
                   <div class="seperate">
                     <h3><a href="">Qualified Tutors</a></h3>
-                    <p>Our high school and university tutors have all been where your child is today! Our application,
+                    <p class="mt-2">Our high school and university tutors have all been where your child is today! Our application,
                       interview and training process ensures only the best for your child.
                     </p>
                   </div>
@@ -290,7 +292,7 @@
                   <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
                   <div class="seperate">
                     <h3><a href="">100% Safe and Virtual Services</a></h3>
-                    <p>All of our sessions will be held online over google meet to ensure our tutors and student's
+                    <p class="mt-2">All of our sessions will be held online over google meet to ensure our tutors and student's
                       safeties during this pandemic. That way, your student can stay safe while learning!
                     </p>
                   </div>
