--- a/index.html
+++ b/index.html
@@ -455,6 +455,22 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
+                <h1 id="intro">Let's Code: Python in 8 Weeks</h1>
+                <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
+                  <img class="rounded-3 img-fluid" src="./assets/img/gallery/LetsCodePoster.PNG" width="400"
+                    alt="Let's Code Poster">
+                  <p class="w-75 mt-5" style="font-style: normal;">
+                    HomeworkHub is happy to introduce Let's Code: Python in 8 Weeks, an engaging and interactive summer coding course 
+                    taught by UW Computer Science students designed to introduce students in grades 4 to 8 to the fundamentals of 
+                    Python programming. With the increasing importance of technology in our lives, learning to code has become a 
+                    valuable skill for students of all ages. More details under Events dropdown on menu!
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="swiper-slide">
+              <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
                 <h1 id="intro">HomeworkHub 2-year anniversary</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
                   <img class="rounded-3 img-fluid" src="./assets/img/TeamPic2YearAnn.PNG" width="500"
