--- a/refugee.html
+++ b/refugee.html
@@ -81,6 +81,9 @@
             <li>
               <a href="/university-panel.html">University Info Panels</a>
             </li>
+            <li>
+              <a href="/python-course.html">Let's Code: Python in 8 Weeks</a>
+            </li>
           </ul>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
