Let's Code Registration
Added Let's Code Python course registration button under both events slider and it's event page

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
               <div class="testimonial-item d-flex max-w-75 flex-column align-items-center">
                 <h1 id="intro">Let's Code: Python in 8 Weeks</h1>
                 <div class="d-flex justify-content-center align-items-center w-75 mt-2 flex-wrap">
-                  <img class="rounded-3 img-fluid" src="./assets/img/gallery/LetsCodePoster.PNG" width="400"
+                  <img class="rounded-3 img-fluid" src="./assets/img/gallery/LetsCodePoster.PNG" width="300"
                     alt="Let's Code Poster">
                   <p class="w-75 mt-5" style="font-style: normal;">
                     HomeworkHub is happy to introduce Let's Code: Python in 8 Weeks, an engaging and interactive summer coding course 
@@ -468,6 +468,9 @@
                     Python programming. With the increasing importance of technology in our lives, learning to code has become a 
                     valuable skill for students of all ages. More details under Events dropdown on menu!
                   </p>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSftP-5hTcQqV_VyGbMqHMkGRgp4I5zYhYxlVD69fVt-mMHhUQ/viewform">
+                    <button class="reg mb-5">Register Here!</button>
+                  </a>
                 </div>
               </div>
             </div>
