--- a/python-course.html
+++ b/python-course.html
@@ -195,6 +195,11 @@
                young learners to develop problem-solving and critical thinking skills. This program is an excellent opportunity for 
                students to explore the world of coding in a fun and supportive environment!
               </p>
+
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSftP-5hTcQqV_VyGbMqHMkGRgp4I5zYhYxlVD69fVt-mMHhUQ/viewform">
+                <button class="reg mb-5">Register Here!</button>
+              </a>
+
               <!-- <button
                 style="background-color: #EACC0D; outline: none; border: none; border-radius: 10px; padding: 10px;"><a
                   href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
