--- a/index.html
+++ b/index.html
@@ -302,17 +302,33 @@
                 </div>
               </div>
             </div>
-            <div class="dsc_len">
-              <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
-                <i class="ri-database-2-line" style="color: #47aeff;"></i>
-                <div class="seperate">
-                  <h3><a href="">We Cater to ESL Students</a></h3>
-                  <p class="mt-2">If English isn't your child's first language, just select the ESL option when
-                    registering. We'll
-                    select a tutor from our many talented multilingual volunteers just for them!
-                  </p>
+
+            <div class="together">
+              <div class="dsc_len">
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
+                  <i class="ri-database-2-line" style="color: #47aeff;"></i>
+                  <div class="seperate">
+                    <h3><a href="">We Cater to ESL Students</a></h3>
+                    <p class="mt-2">If English isn't your child's first language, just select the ESL option when
+                      registering. We'll
+                      select a tutor from our many talented multilingual volunteers just for them!
+                    </p>
+                  </div>
                 </div>
               </div>
+
+              <div class="dsc_len">
+                <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
+                  <i class="ri-store-line" style="color: #ffbb2c;"></i>
+                  <div class="seperate">
+                    <h3><a href="">Get Tutoring in Multiple Subjects</a></h3>
+                    <p class="mt-2">At HomeworkHub, we offer students the ability to sign up for upto 3 different subjects at a time. 
+                      This enables students to recieve all the help they may need without subject limit restrictions.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
             </div>
 
           </div>
@@ -366,7 +382,7 @@
               <h3>Subject Limit</h3>
               <img class="icons" src="./assets/img/icons/credit-limit.png">
               <h5>You can sign up for</h5>
-              <p><b>1</b> subject at a time</p>
+              <p><b>3</b> subjects at a time</p>
 
             </div>
           </div>
@@ -415,12 +431,6 @@
         </div>
 
         <div class="row" data-aos="fade-left">
-          <div class="col-lg-3 col-md-6">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
-              <h2>Mandarin</h2>
-              <img class="subjects" src="./assets/img/icons/calligraphy.png">
-            </div>
-          </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0" id="bckr">
             <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
@@ -708,7 +718,7 @@
               </ul>
               <a href="https://www.paypal.com/donate?business=DRPWCU5CZ3J5J&amp;currency_code=CAD"><button
                   class="donate">Donate Now</button></a>
-              <p><strong>Alternative: </strong>Email transfer your amount to <i>tutoring.homeworkhub@gmail.com</i>
+              <p><strong>Alternative: </strong>Email transfer your amount to <i>info@homeworkhubtutoring.ca</i>
               </p>
             </div>
           </div>
@@ -1135,11 +1145,8 @@
                   class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  As of March 2023, we are limiting each student to 1 subject (temporary decrease from 3 subjects) due
-                  to extremely high student demand. We are also giving priority pairing to in-need students. If you have
-                  any urgent needs or requests, please email us. We thank you for your understanding and we hope to get
-                  back to our regular 3 subjects soon!
-
+                  As of August 2023, we are now back to our regular 3 subject sign-up. Students can sign up for a maximum of 
+                  three subjects instead of one! If you have any urgent needs or requests, please email us.
                 </p>
               </div>
             </li>
