--- a/team.html
+++ b/team.html
@@ -172,7 +172,20 @@
 
         <div class="row" data-aos="fade-left">
 
-
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Anne"><img src="assets/img/team/anne.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Anne Zhang</h4>
+                <span>President</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
@@ -238,26 +251,10 @@
             </div>
           </div>
 
-       
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Anne"><img src="assets/img/team/Anne.JPG" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Anne Zhang</h4>
-                <span>Students and Pairing Director</span>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
     
          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
                 <div class="member" data-aos="zoom-in" data-aos-delay="300">
-                  <div class="pic" data-bioName="Jimmy"><img src="assets/img/team/Jimmy.jpg" class="img-fluid" alt=""></div>
+                  <div class="pic" data-bioName="Jimmy"><img src="assets/img/team/Jimmy.jpeg" class="img-fluid" alt=""></div>
                   <div class="member-info">
                     <h4>Jimmy Tao</h4>
                     <span>Pairing and Tech Manager</span>
