--- a/university-panel.html
+++ b/university-panel.html
@@ -123,7 +123,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>HomeworkHub’s <span>University Information Panels!</span></h1>
+            <h1><span>HomeworkHub’s</span> University Information Panels!</h1>
             <!-- <h2>We help our community</h2> -->
             <!-- <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto">Learn More</a>
