--- a/volunteer.html
+++ b/volunteer.html
@@ -89,6 +89,7 @@
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="team.html">Our Team</a></li>
+            <li><a href="board-of-directors.html">Our Board of Directors</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
           </ul>
