--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -176,7 +176,6 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.png" class="img-fluid" alt="">
-              <!-- upload her picture to assets/img/team and then change image -->
               </div>
               <div class="member-info">
                 <h4>Neha Shanavas</h4>
@@ -187,6 +186,35 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Leah"><img src="assets/img/team/Leah C.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Leah Cai</h4>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Paris"><img src="assets/img/team/paris.jpg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Paris Cai</h4>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          
           <p>Contact info@homeworkhubtutoring.ca to apply to be a board director</p>
 
         </div>
