--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -163,7 +163,7 @@
   <main id="main">
 
     <!-- ======= Board Section ======= -->
-    <section id="board" class="board">
+    <section id="board" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
