--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -189,7 +189,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Leah"><img src="assets/img/team/Leah C.jpg" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Leah"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Leah Cai</h4>
