Update Paris Pic + Titles
Update Paris's picture and add titles/roles to board of director page

--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -175,38 +175,41 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.png" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Neha Shanavas</h4>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Leah"><img src="assets/img/team/leah.jpg" class="img-fluid" alt="">
-              </div>
-              <div class="member-info">
-                <h4>Leah Cai</h4>
-                <!--  <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div> -->
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
-            <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic" data-bioName="Paris"><img src="assets/img/team/paris.jpg" class="img-fluid" alt="">
+              <div class="pic" data-bioName="Paris"><img src="assets/img/team/Paris.png" class="img-fluid tmpSize" alt="">
               </div>
               <div class="member-info">
                 <h4>Paris Cai</h4>
+                <span>Executive Director</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Neha"><img src="assets/img/team/Neha.png" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Neha Shanavas</h4>
+                <span>Director of Operations</span>
+                <!--  <div class="social">
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-5">
+            <div class="member" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic" data-bioName="Leah"><img src="assets/img/team/leah.jpg" class="img-fluid tmpSize" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Leah Cai</h4>
+                <span>Director of Operations</span>
                 <!--  <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
@@ -215,7 +218,9 @@
             </div>
           </div>
           
-          <p>Contact info@homeworkhubtutoring.ca to apply to be a board director</p>
+          <p> </p>
+          <P> </P>
+          <p><i>Contact info@homeworkhubtutoring.ca to apply to be a board director</i></p>
 
         </div>
 
