Replaced highschool with high school, removed buttons on team and board hero sections

--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
           </ul>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="team.html">Our Highschool Team</a></li>
+            <li><a href="team.html">Our High School Team</a></li>
             <li><a href="board-of-directors.html">Our Board of Directors</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
@@ -126,13 +126,6 @@
           <div data-aos="zoom-out">
             <h1><span>HomeworkHub</span> Team</h1>
             <h2>Let's learn and teach together!</h2>
-            <div class="text-center text-lg-start">
-              <a href="https://forms.gle/D6hXpn68ztPmQZPH7" class="m-2 btn-get-started scrollto">Become a Tutor</a>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSeCJdNKBQHUi_8bKE3GW6stMa2GuQe3DyfDc2KEGRVBNjufFg/viewform?embedded=true"
-                class="btn-get-started scrollto">Become a Student</a>
-              <a href="university-panel.html" class="btn-get-started scrollto m-2">University Panel</a>
-              <a href="refugee.html" class="btn-get-started scrollto m-2">Refugee Info</a>
-            </div>
           </div>
         </div>
         <div class="col-lg-4 order-1 order-lg-2 hero-img mt-3" data-aos="zoom-out" data-aos-delay="300">
@@ -169,7 +162,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Team</h2>
-          <p>Our Team</p>
+          <p>Our High School Team</p>
         </div>
 
         <div class="row" data-aos="fade-left">
