--- a/volunteer.html
+++ b/volunteer.html
@@ -88,7 +88,7 @@
         </li>
         <li class="dropdown"><a href="#"><span>Our Community</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="team.html">Our Highschool Team</a></li>
+            <li><a href="team.html">Our High School Team</a></li>
             <li><a href="board-of-directors.html">Our Board of Directors</a></li>
             <li><a href="index.html#donors">Our Partners</a></li>
             <li><a href="index.html#news">Our Features</a></li>
