Changed $10 fee to non mandatory
Signed-off-by: Meh494 <110735674+Meh494@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   <i class="ri-store-line" style="color: #ffbb2c;"></i>
                   <div class="seperate">
                     <h3><a href="">We’re Accessible</a></h3>
-                    <p class="mt-2">We believe that everyone should have access to quality educational resources. Financing your student's educational journey shouldn't be something you need to worry about! For our tutoring program, we only charge a one time, $10 registration fee for regular students while remaining  completely FREE for students in need. 
+                    <p class="mt-2">We believe that everyone should have access to quality educational resources. Financing your student's educational journey shouldn't be something you need to worry about! For our tutoring program, we only ask for a non-mandatory $10 donation from regular students while remaining  completely FREE for students in need. 
                     </p>
                   </div>
                 </div>
@@ -1236,7 +1236,7 @@
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  For regular students, HomeworkHub charges a one time, $10 registration fee to help us cover our operational costs, whereas students who are in need are not required to pay this fee. Please make sure to follow the checkout link after submitting the registration questions to complete payment in order to be paired, or select the “Wave” option for students in need if this applies to you. Please note that students will only be paired when the payment has been submitted, or the wave option is selected.
+                  For regular students, HomeworkHub asks for a non-mandatory $10 donation to help maintain our services. Please make sure to follow the checkout link after submitting the registration questions to complete payment if you decide on making a donation. 
                 </p>
               </div>
             </li>
