--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                   <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
                   <div class="seperate">
                     <h3><a href="">100% Safe and Virtual Services</a></h3>
-                    <p class="mt-2">All of our sessions will be held online over google meet to ensure our tutors and student's
+                    <p class="mt-2">All of our sessions will be held online over Google Meet to ensure our tutors and student's
                       safeties during this pandemic. That way, your student can stay safe while learning!
                     </p>
                   </div>
@@ -320,8 +320,8 @@
                   <i class="ri-store-line" style="color: #ffbb2c;"></i>
                   <div class="seperate">
                     <h3><a href="">Get Tutoring in Multiple Subjects</a></h3>
-                    <p class="mt-2">At HomeworkHub, we offer students the ability to sign up for upto 3 different subjects at a time. 
-                      This enables students to recieve all the help they may need without subject limit restrictions.
+                    <p class="mt-2">At HomeworkHub, we offer students the ability to sign up for up to 3 different subjects at a time. 
+                      This enables students to receive all the help they may need without subject limit restrictions.
                     </p>
                   </div>
                 </div>
