readded ivolunteerperthhuron lgo
Signed-off-by: Meh494 <110735674+Meh494@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
               <div class="testimonial-item">
                 <h3>iVolunteer Perth-Huron</h3>
                 <h4>Community Partner</h4>
-                <img src="https://www.ivolunteerperthhuron.ca/vperthhuron/design/iVolunteer_RGB.png"
+                <img src="/assets/img/other/ivolunteerperthhuron.png" class="partner_img">
                   class="partner_img">
               </div>
             </div><!-- End testimonial item -->
